--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -37,18 +37,21 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   color: var(--color-text);
-  font-family: sans-serif;
-  font-family: var(--font-sans);
+  font-family: "Noto Sans KR", sans-serif;
+  font-family: "IBM Plex Sans", sans-serif;
+  /* font-family: var(--font-sans); */
   font-weight: normal;
   margin: 0;
   word-wrap: break-word;
+  overflow-y: hidden;
+  scrollbar-width: none;
 }
 a {
   background-color: transparent;
-  color: var(--color-primary);
+  color: #121212;
   text-decoration: none;
   font-weight: 500;
-  text-decoration: underline;
+  text-decoration: none;
   text-decoration-thickness: 1.5px;
   text-underline-offset: 2px;
 }
@@ -131,6 +134,7 @@ ol {
   margin-left: var(--space-4);
   list-style-position: outside;
   list-style-image: none;
+  list-style: none;
 }
 pre {
   margin-left: 0;
@@ -221,4 +225,7 @@ pre code:after,
 pre tt:before,
 pre tt:after {
   content: none;
+}
+body::-webkit-scrollbar {
+  display: none;
 }
