gsap 패키지 설치 및 적용

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -45,6 +45,7 @@ body {
   word-wrap: break-word;
   overflow-y: hidden;
   scrollbar-width: none;
+  background-color: rgb(254, 254, 254);
 }
 a {
   background-color: transparent;
